# pypanther

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  find.py  generate.py  main.py  pantherlogfetch.sh  pyproject.toml  unique-alerts.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  sync-pa.yml  tag.yml  test.yml  version.yml
panther_analysis/: __init__.py  base.py  cache.py  get.py  register.py
panther_analysis/data_models/: asana_data_model.py  atlassian_data_model.py  aws_alb_data_model.py  aws_cloudtrail_data_model.py  aws_eks_data_model.py  aws_s3_data_model.py  aws_vpcdns_data_model.py  aws_vpcflow_data_model.py  azure_signin_data_model.py  box_data_model.py  cisco_umbrella_data_model.py  cloudflare_firewall_data_model.py  cloudflare_httpreq_data_model.py  crowdstrike_fdr_data_model.py  gcp_data_model.py  github_data_model.py  gsuite_data_model.py  (+12 more)
pypanther/: __init__.py  base.py  cache.py  data_model_v2_new.py  data_models_v2.py  datamodels.py  display.py  field.py  generate.py  get.py  get_alert_stats.py  infer.py  list_log_types.py  list_rules.py  log_types.py  lookups.py  main.py  registry.py  saved_query.py  scheduled_rule.py  schema.py  schemas.py  setup_subparsers.py  severity.py  shared_args.py  testing.py  unit_tests.py  upload.py  utils.py  wrap.py
starter-kit/: README.md
tests/: display.py  mocks.py  test_base.py  test_data_models_v2.py  test_data_models_v2_new.py  test_display.py  test_get.py  test_get_managed_rule.py  test_get_rule.py  test_get_rules.py  test_list_log_types.py  test_list_rules.py  test_lookups.py  test_pypanther_init.py  test_register.py  test_registry.py  test_rules.py  test_scheduled_rule.py  test_schema.py  test_schemas.py  test_severity.py  test_testing.py  test_upload.py  test_wrap.py
(+1461 files in other folders)
